fix assets, change index and align font

--- a/assets/style.css
+++ b/assets/style.css
@@ -60,7 +60,7 @@ li a {
 .flex-container {
   display: flex;
   flex-flow: row wrap;
-  background-color: beige;
+  background-color: rgb(231, 231, 227);
   justify-content: space-around;
   align-items: center;
   border-style: solid;
@@ -133,12 +133,13 @@ footer {
   background-color: rgb(17, 4, 63);
 }
 
-#icons img {
-  justify-content: center;
-  align-items: center;
-}
 
 .contact-me {
-  color: antiquewhite;
-  
+  color: rgb(116, 114, 111);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5%;
+  list-style: none;
+  height: 15vh;
 }
